@startuml
class Matriz {
  - elementos: List[List[int]]
  + __init__(elementos: list)
}

class Transpuesta {
  - matriz: Matriz
  + __init__(matriz: Matriz)
  + calcular_transpuesta(): Matriz
}

class Imprimir {
  - matriz: Matriz
  + __init__(matriz: Matriz)
  + imprimir(): void
}

class Lanzador {
  - elementos: List[List[int]]
  - cantidad_filas: int
  - cantidad_columnas: int
  - matriz: Matriz
  - transpuesta: Transpuesta
  - imprimir: Imprimir
  + __init__()
  + crear_matriz(): void
  + lanzar(): void
}

Matriz -- Transpuesta : <<uses>>
Matriz -- Imprimir : <<uses>>
Lanzador -- Matriz : <<creates>>
Lanzador -- Transpuesta : <<creates>>
Lanzador -- Imprimir : <<creates>>
@enduml